# jenova

./: .gitignore  .gitmodules  BLUEPRINT.md  CONCEPT_TTS.md  FIX.md  INSTALLATION-ANALYSIS.md  INSTALLATION-AUDIT.md  INSTALLATION-FINAL-REPORT.md  INSTALLATION-FIX-SUMMARY.md  INSTALLATION-QUICK-REFERENCE.md  INSTALLATION-VERIFICATION-COMPLETE.md  JENOVA-NVIM-ROADMAP.md  LICENSE  LINUX.md  Makefile  NOTICE  PLAN.md  README.md  UPSTREAM-COPYRIGHT  cleanup.sh  coder  coder-agent  coder-server  coder-setup  ed.defns.h  install-jenova.sh  install.sh  jca.kdev4  jenova-manager.sh  jenova-setup  llama-server-nvim.sh  llama_dl.sh  patch_main.py  patchlevel.h  plan.md  report.md  sh.err.h  shellcheck_report.txt  tc.const.h  tc.defs.c  (+15 more)
.devdocs/: BRIEFING.md  DECISIONS_LOG.md  PROGRESS.md  SESSION_HANDOFF.md
.kdev4/: jca.kdev4
backups/20260324_030019/: agent.lua  coder  coder-agent
backups/20260324_030726/: coder-server
backups/20260324_032000/: agent.lua  coder-agent  search.lua
backups/20260324_032749/: agent.lua  memory.lua
backups/20260324_033643/: agent.lua
backups/20260324_034227/: agent.lua
backups/20260324_034639/: agent.lua  coder-agent-linker
backups/20260324_071752/: agent.lua  embed.lua  memory.lua  search.lua
cli-agent/: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  compile_flags.txt  nul
cli-agent/build_test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_test_json  test_test_mcp  test_test_sandbox
cli-agent/docs/: UNIFICATION_PLAN.md  architecture.md
cli-agent/include/: jenova.h
cli-agent/lua/: init.lua
cli-agent/lua/agent/: loop.lua  memory.lua  ui.lua
cli-agent/lua/assistant/: session_history.lua
cli-agent/lua/buddy/: companion.lua  types.lua
cli-agent/lua/cli/commands/: extended.lua  ported.lua  registry.lua
cli-agent/lua/config/: loader.lua  pricing.lua
cli-agent/lua/constants/: prompts.lua
cli-agent/lua/context/: file_tracker.lua  manager.lua
cli-agent/lua/coordinator/: coordinator_mode.lua
cli-agent/lua/engine/: query_engine.lua
cli-agent/lua/history/: manager.lua
cli-agent/lua/hooks/: manager.lua
cli-agent/lua/legacy/agent/: memory.lua
cli-agent/lua/legacy/tools/: enter_plan_mode.lua  enter_worktree.lua  powershell.lua  read_mcp_resource.lua  snip.lua  synthetic_output.lua  task_output.lua  task_stop.lua  web_search.lua
cli-agent/lua/permissions/: manager.lua
cli-agent/lua/plugins/: loader.lua
cli-agent/lua/providers/: anthropic.lua  base.lua  gemini.lua  init.lua  jenova_backend.lua  llamacpp.lua  openai.lua  openrouter.lua
cli-agent/lua/services/api/: jenova.lua
cli-agent/lua/services/memory/: manager.lua
cli-agent/lua/skills/: loader.lua
cli-agent/lua/state/: app_state.lua
cli-agent/lua/tools/: agent.lua  ask_user.lua  bash.lua  brief.lua  config_tool.lua  enter_plan_mode.lua  enter_worktree.lua  exit_plan_mode.lua  exit_worktree.lua  file_edit.lua  file_read.lua  file_write.lua  git.lua  glob.lua  grep.lua  list_mcp_resources.lua  local_search.lua  lsp.lua  mcp_auth.lua  mcp_tool.lua  multiedit.lua  notebook_edit.lua  powershell.lua  read_mcp_resource.lua  registry.lua  remote_trigger.lua  repl.lua  schedule_cron.lua  send_message.lua  skill.lua  sleep.lua  snip.lua  synthetic_output.lua  task_base.lua  task_create.lua  task_get.lua  task_list.lua  task_update.lua  team_create.lua  team_delete.lua  (+5 more)
cli-agent/lua/ui/screens/: repl.lua
cli-agent/lua/utils/: array.lua  embed.lua  fs_fallback.lua  http.lua  json_fallback.lua  paths.lua  shell.lua  string.lua  trio.lua
cli-agent/lua/vim/: keybindings.lua
cli-agent/src/agent/: agent.c
cli-agent/src/auth/: auth.c
cli-agent/src/crypto/: crypto.c
cli-agent/src/fs/: fs.c
cli-agent/src/json/: json.c
cli-agent/src/llama/: llama.c
cli-agent/src/mcp/: mcp.c
cli-agent/src/net/: net.c
cli-agent/src/process/: process.c
cli-agent/src/sandbox/: sandbox.c
cli-agent/tests/c/: test_json.c  test_mcp.c  test_sandbox  test_sandbox.c
conductor/: docs-update.md  honesty-and-acknowledgements.md  native-tooling-overhaul.md  option-b-text-tooling.md  restore-agent-chat.md  streamline-installation.md  test_plan.md
docs/: privacy.md
docs/architecture/: agent.md  backend.md  cohesion.md  overview.md  webui.md
docs/hardware/: performance.md  profiles.md
docs/installation/: CHANGELOG-install.md  IMPROVEMENTS.md  STREAMLINED.md  checklist.md  dependencies.md  freebsd.md  linux.md  macos.md
docs/usage/: cli.md  jvim.md  models.md
etc/: coder.conf  jenova.b.conf  jenova.conf  jenova.local.conf  jenova.local.conf.example
hardware-profiles/: README.md  common-setup.sh  detect-hardware.sh  install.sh  jenova-setup  jenova.conf  profile.conf
jca_web/: .gitignore  README.md  build_output.txt  components.json  eslint.config.js  package-lock.json  package.json  playwright.config.ts  svelte.config.js  vite.config.ts
jca_web/scripts/: dev.sh  finalize-build.js  (+2 more)
jenova-tray/: Cargo.toml
jenova-ui/: Makefile  jenova-ui
jvim/: .gitignore  BUILD.md  CMakeLists.txt  INSTALL.md  LICENSE.txt  Makefile  PLUGINS.md  README.md  build.zig
jvim-config/: .luarc.json  init.lua  plugins.lock.json
lib/: agent.lua  chat.lua  chat_presentation.lua  chat_service.lua  chat_store.lua  daemon.lua  detect-env.sh  embed.lua  ffi_defs.lua  healthcheck.lua  http.lua  indexer_runner.lua  jenova-conf.sh  jenova-model.sh  json.lua  linux-tune.sh  memory.lua  prompts.lua  proxy.lua  search.lua  settings.lua  ui.lua
models/: README.md
nls/: Makefile
nvim/: init.lua  lazy-lock.json
public/: bundle.css  index.html
scripts/: build-desktop.sh  cleanup.sh  install-complete.sh  install-dependencies.sh  install-toolchain.sh  install.sh  jenova-manager.sh  jenova-setup  jenova.conf  llama_dl.sh  model_dl.sh  preflight-check.sh  profile.conf  sync-modules.sh  test_bin_jenova.sh  uninstall.sh  update.sh  vendor-plugins.sh  verify-install.sh
tests/: Makefile  download-draft-model.sh  test-health.sh  test-launcher.sh  test_bin_jenova.sh  test_gpu.sh  test_gpu_cpu.sh  test_gpu_single.sh  test_linux_tune_regex.sh  test_validate_arg.sh
(+668 files in other folders)
